Clean up element code & add more docs

--- a/demo.html
+++ b/demo.html
@@ -6,10 +6,11 @@
 
   <script src="../platform/platform.js"></script>
   <link rel="import" href="wizard-view.html">
+  <link rel="stylesheet" href="demo.css">
 </head>
 
 <body unresolved>
-  <p>An example of wizard-view looks like this:</p>
+  <p#title>An example of wizard-view looks like this (the styling is applied only for the demo)</p>
 
   <wizard-view id="element">
     <wizard-step active>
